Kubedefs/appservice.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-app

spec:
  selector:
    app: flask-app

  ports:
  - port: 8181
    targetPort: AppPort

  type: ClusterIP
