Kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
 name: flaskdb
spec:  
 ports:
 - port: 3306
   targetPort: flask-port    ############## will connect db to othere services using cluster ip service(internal service communication)
   protocol: TCP
 selector:
   app: flaskdb
 type: ClusterIP
