Kubedefs/redsiservice.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-redis

spec:
  selector:
    app: flask-redis

  ports:
  - port: 6379
    targetPort: redisPort

  type: ClusterIP
